# shield

./: Cargo.toml  LICENSE  Trunk.toml
agent/: Cargo.toml
agent/src/: main.rs  ollama.rs  temp.rs
backend/: Cargo.toml  tauri.conf.json
backend/src/: lib.rs  main.rs
circuit/: Cargo.toml
circuit/src/: lib.rs  merkle.rs  pool.rs
ui/: Cargo.toml  README.md  index.html  styles.css
ui/src/: app.rs  bindgen.rs  main.rs
ui/src/util/: mod.rs
