[workspace]
resolver = "2"
members = ["backend", "ui", "circuit", "agent"]

[workspace.package]
version = "0.0.1"
authors = ["Anon123 <anon123@anoncorp.com>"]
edition = "2021"
license = "MIT"
rust-version = "1.82"

[workspace.dependencies]
sha3 = "0.10.8"
rand = "0.8.5"
hex = "0.4.3"
serde = "1"
serde_json = "1"
anyhow = "1.0.75"
lazy_static = "1.5.0"
thiserror = "1.0.61"
tokio = "1.34.0"
reqwest = "0.12"
