[package]
name = "shield-agent"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
sha3.workspace = true
rand.workspace = true
hex.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
rig-core = "0.5.0"
tokio = { workspace = true, features = ["full"] }
