[package]
name = "shield-agent"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
shield-circuit = { path = "../circuit" }

sha3.workspace = true
rand.workspace = true
hex.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
lazy_static.workspace = true
tokio = { workspace = true, features = ["full"] }
reqwest = { workspace = true, features = ["json"] }

rig-core = { version = "0.5.0", path = "../../rig/rig-core" }
