[package]
name = "shield"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "shield_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
shield-circuit = { path = "../circuit", version = "*" }

rand = "0.8.5"
lazy_static = "1.5.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "=2.0.4"
