[package]
name = "shield"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "shield_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
shield-circuit = { path = "../circuit", version = "*" }

lazy_static.workspace = true
rand.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "=2.0.4"
